--- a/goodtables.yml
+++ b/goodtables.yml
@@ -5,3 +5,23 @@ files:
     escapechar: \
     lineterminator: \r\n
     quotechar: "
+
+datapackages:
+  - 'datapackage.json'
+  
+settings:
+  checks:
+    # You can pass check types
+    - structure
+    - schema
+    # ...or individual checks
+    - no-headers
+    - blank-headers
+  skip_checks:
+    - duplicate-lines
+  error_limit: 1
+  table_limit: 1
+  row_limit: 5000
+  infer_schema: True
+  infer_fields: True
+  order_fields: True
