--- a/goodtables.yml
+++ b/goodtables.yml
@@ -1,7 +1,7 @@
 files:
   - source: siteImport.csv
     schema: datapackage.json
-    delimiter: |
+    delimiter: '|'
     doublequote: True
     escapechar: \
     lineterminator: \r\n
